--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=3000
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/22?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234567
 
 logging.config=classpath:logback-plus.xml
 
